--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,11 @@
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-surefire-plugin</artifactId>
-			  <version>2.22.0</version>
+			  <configuration>
+                <argLine>--add-modules java.base ${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+                <forkCount>3</forkCount>
+                <reuseForks>true</reuseForks>
+              </configuration>
 			</plugin>
 		</plugins>
 	</build>
