--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,7 @@
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-surefire-plugin</artifactId>
-			  <configuration>
-                <argLine>--add-modules java.base ${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
-                <forkCount>3</forkCount>
-                <reuseForks>true</reuseForks>
-              </configuration>
+			  <version>2.20</version>
 			</plugin>
 		</plugins>
 	</build>
